--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE HTML>
 <html>
-  <h1>This is a test</h1>
-  <p>Q: who was this made by?</p>
-  <b>
-    <p>A: frankcisk0</p>
+  <title>Curly Waffle 76</title>
 </html>
