--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
 <html>
   <title>Curly Waffle 76</title>
+  <link rel="icon" type="image/x-icon" href="/root/favicon1.jfif">
 </html>
