--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <html>
   <title>Curly Waffle 76</title>
   <link rel="icon" type="image/x-icon" href="/root/favicon1.jfif">
+  <h1>This is the best website in the whole world</h1>
 </html>
