--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
   <title>Curly Waffle 76</title>
   <link rel="icon" type="image/x-icon" href="/root/favicon1.jfif">
   <h1>This is the best website in the whole world</h1>
+  <body>
+    <form class="passform>
+                 <input type="password" required id="GOOFYWAFFLE">
+                 <input type="submit">
+</form>
 </html>
